fixed spacing between add client button

--- a/src/pages/assets/styles/global.css
+++ b/src/pages/assets/styles/global.css
@@ -69,13 +69,14 @@
 }
 
 .page-content {
-  padding: 5vh;
-  padding-left: 11vw;
-  padding-bottom: 10vh;
+  padding: 5vh 5vh;
+  overflow: visible;
+
   margin: 0;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  gap: 5vh;
+  padding-left: 11vw;
 }
 
 a {
